[gd_scene load_steps=14 format=3 uid="uid://bgjnf3v1x8u8s"]

[ext_resource type="Script" path="res://Levels/Scripts/level.gd" id="1_1b1dc"]
[ext_resource type="PackedScene" uid="uid://bomejv022bvrb" path="res://Base_Stage/base_stage.tscn" id="1_tsags"]
[ext_resource type="PackedScene" uid="uid://dkoj3drkffdr6" path="res://Assets/Objects/Sprites/Props/dungeon_door.tscn" id="2_1jte3"]
[ext_resource type="PackedScene" uid="uid://b37loqxw3qhmp" path="res://Levels/level_transition.tscn" id="3_fq0q4"]
[ext_resource type="PackedScene" uid="uid://d4c4c1kxcld77" path="res://General_Nodes/switch_tile.tscn" id="4_cbarx"]
[ext_resource type="Script" path="res://Levels/Stage_1/stage4_puzzle_container.gd" id="4_ujcm1"]
[ext_resource type="PackedScene" uid="uid://dcavrdbnl4ugy" path="res://Items/lever/lever_4.tscn" id="5_8gown"]
[ext_resource type="Script" path="res://General_Nodes/HurtBox/hurt_box.gd" id="5_hnexm"]
[ext_resource type="PackedScene" uid="uid://mk4n78rgqpdw" path="res://Items/sign/sign.tscn" id="6_itr73"]
[ext_resource type="PackedScene" uid="uid://u3fmatyohgrx" path="res://General_Nodes/PersistentDataHelper/int_persistent_data_handler.tscn" id="7_uwj7q"]
[ext_resource type="PackedScene" uid="uid://bu78bdma4wem3" path="res://Levels/player_spawn.tscn" id="10_smgmu"]
[ext_resource type="PackedScene" uid="uid://bkrgw75q1avhy" path="res://Assets/Objects/Sprites/Props/cell_door.tscn" id="11_7gf04"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fon8f"]
radius = 240.0

[node name="Stage4" type="Node2D"]
script = ExtResource("1_1b1dc")

[node name="Base_stage" parent="." instance=ExtResource("1_tsags")]
z_index = -2
position = Vector2(0, 0)
layer_0/tile_data = PackedInt32Array(-393226, 131079, 0, -458762, 131079, 0, -524298, 131079, 0, -589834, 131079, 0, -655370, 131079, 0, -720906, 131079, 0, -786442, 131079, 0, -851978, 131079, 0, -917514, 131079, 0, -983050, 131079, 0, -1048586, 131079, 0, -1114122, 131079, 0, -1179658, 131079, 0, -1245194, 131079, 0, -1245193, 131079, 0, -1179657, 131079, 0, -1114121, 131079, 0, -1245192, 131079, 0, -1179656, 131079, 0, -1114120, 131079, 0, -1245191, 131079, 0, -1179655, 131079, 0, -1114119, 131079, 0, -1245190, 131079, 0, -1179654, 131079, 0, -1114118, 131079, 0, -1245189, 131079, 0, -1179653, 131079, 0, -1114117, 131079, 0, -1245188, 131079, 0, -1179652, 131079, 0, -1114116, 131079, 0, -1245187, 131079, 0, -1179651, 131079, 0, -1114115, 131079, 0, -1245186, 131079, 0, -1179650, 196615, 0, -1114114, 196615, 0, -1245185, 131079, 0, -1179649, 196615, 0, -1114113, 131079, 0, -1310720, 131079, 0, -1245184, 196615, 0, -1179648, 131079, 0, -1310719, 131079, 0, -1245183, 196615, 0, -1179647, 131079, 0, -1310718, 131079, 0, -1245182, 196615, 0, -1179646, 131079, 0, -1310717, 131079, 0, -1245181, 196615, 0, -1179645, 131079, 0, -1310716, 131079, 0, -1245180, 196615, 0, -1179644, 131079, 0, -1310715, 131079, 0, -1245179, 196615, 0, -1179643, 131079, 0, -1310714, 131079, 0, -1245178, 196615, 0, -1179642, 131079, 0, -1310713, 131079, 0, -1245177, 196615, 0, -1179641, 131079, 0, -1310712, 131079, 0, -1245176, 196615, 0, -1179640, 196615, 0, -1310711, 131079, 0, -1245175, 131079, 0, -1179639, 131079, 0, -1048585, 131079, 0, -983049, 131079, 0, -917513, 131079, 0, -851977, 131079, 0, -786441, 131079, 0, -720905, 131079, 0, -655369, 131079, 0, -589833, 131079, 0, -524297, 131079, 0, -458761, 131079, 0, -393225, 131079, 0, -1048584, 131079, 0, -983048, 131079, 0, -917512, 131079, 0, -851976, 131079, 0, -786440, 131079, 0, -655368, 131079, 0, -589832, 131079, 0, -524296, 131079, 0, -458760, 131079, 0, -393224, 131079, 0, -1048583, 131079, 0, -983047, 131079, 0, -917511, 131079, 0, -851975, 131079, 0, -786439, 131079, 0, -655367, 131079, 0, -589831, 131079, 0, -524295, 131079, 0, -458759, 131079, 0, -393223, 131079, 0, -1048582, 131079, 0, -983046, 131079, 0, -917510, 131079, 0, -851974, 131079, 0, -589830, 131079, 0, -524294, 131079, 0, -458758, 131079, 0, -393222, 131079, 0, -1048581, 131079, 0, -983045, 131079, 0, -917509, 131079, 0, -851973, 131079, 0, -458757, 131079, 0, -393221, 131079, 0, -1048580, 131079, 0, -983044, 131079, 0, -917508, 131079, 0, -851972, 131079, 0, -786436, 131079, 0, -458756, 131079, 0, -393220, 131079, 0, -1048579, 131079, 0, -983043, 131079, 0, -917507, 131079, 0, -851971, 131079, 0, -786435, 131079, 0, -655363, 131079, 0, -524291, 131079, 0, -458755, 131079, 0, -393219, 131079, 0, -1048578, 196615, 0, -983042, 196615, 0, -917506, 196615, 0, -851970, 196615, 0, -786434, 196615, 0, -655362, 196615, 0, -524290, 196615, 0, -458754, 131079, 0, -393218, 131079, 0, -1048577, 131079, 0, -983041, 131079, 0, -917505, 131079, 0, -851969, 131079, 0, -458753, 131079, 0, -393217, 131079, 0, -1114112, 131079, 0, -1048576, 131079, 0, -983040, 131079, 0, -917504, 131079, 0, -524288, 131079, 0, -458752, 131079, 0, -1114111, 131079, 0, -1048575, 131079, 0, -983039, 131079, 0, -917503, 131079, 0, -851967, 131079, 0, -720895, 131079, 0, -589823, 196615, 0, -524287, 131079, 0, -458751, 131079, 0, -1114110, 131079, 0, -1048574, 131079, 0, -983038, 131079, 0, -917502, 131079, 0, -851966, 131079, 0, -720894, 131079, 0, -589822, 196615, 0, -524286, 131079, 0, -458750, 131079, 0, -1114109, 131079, 0, -1048573, 131079, 0, -983037, 131079, 0, -917501, 131079, 0, -524285, 131079, 0, -458749, 131079, 0, -1114108, 131079, 0, -1048572, 131079, 0, -983036, 131079, 0, -917500, 131079, 0, -524284, 131079, 0, -458748, 131079, 0, -1114107, 131079, 0, -1048571, 131079, 0, -983035, 131079, 0, -917499, 131079, 0, -851963, 131079, 0, -720891, 131079, 0, -655355, 131079, 0, -589819, 196615, 0, -524283, 131079, 0, -458747, 131079, 0, -1114106, 131079, 0, -1048570, 131079, 0, -983034, 131079, 0, -917498, 131079, 0, -851962, 131079, 0, -786426, 131079, 0, -720890, 131079, 0, -655354, 131079, 0, -589818, 196615, 0, -524282, 131079, 0, -458746, 131079, 0, -1114105, 131079, 0, -1048569, 131079, 0, -983033, 131079, 0, -917497, 131079, 0, -851961, 131079, 0, -786425, 131079, 0, -720889, 131079, 0, -655353, 131079, 0, -589817, 196615, 0, -524281, 131079, 0, -458745, 131079, 0, -1114104, 196615, 0, -1048568, 196615, 0, -983032, 196615, 0, -917496, 196615, 0, -851960, 196615, 0, -786424, 196615, 0, -720888, 196615, 0, -655352, 196615, 0, -589816, 196615, 0, -524280, 131079, 0, -458744, 131079, 0, -1114103, 131079, 0, -1048567, 131079, 0, -983031, 131079, 0, -917495, 131079, 0, -851959, 131079, 0, -786423, 131079, 0, -720887, 131079, 0, -655351, 131079, 0, -589815, 131079, 0, -524279, 131079, 0, -458743, 131079, 0, -1441793, 131079, 0, -1376257, 131079, 0, -1310721, 131079, 0, -1507328, 131079, 0, -1441792, 131079, 0, -1376256, 131079, 0, -720904, 131079, 0, -720903, 131079, 0, -655366, 131079, 0, -720901, 131079, 0, -720902, 131079, 0, -786438, 131079, 0, -786437, 131079, 0, -720900, 131079, 0, -786427, 131079, 0, -786429, 131079, 0, -786428, 131079, 0, -851964, 131079, 0, -851965, 131079, 0, -786430, 131079, 0, -786431, 131079, 0, -720899, 131079, 0, -720898, 196615, 0, -720897, 131079, 0, -786432, 131079, 0, -851968, 131079, 0, -786433, 131079, 0, -589827, 131079, 0, -589826, 196615, 0, -655358, 131079, 0, -655359, 131079, 0, -655365, 131079, 0, -589829, 131079, 0, -524293, 131079, 0, -655364, 131079, 0, -589828, 131079, 0, -524292, 131079, 0, -655361, 131079, 0, -589825, 131079, 0, -524289, 196615, 0, -720896, 131079, 0, -655360, 131079, 0, -589824, 196615, 0, -720893, 131079, 0, -655357, 131079, 0, -589821, 196615, 0, -720892, 131079, 0, -655356, 131079, 0, -589820, 196615, 0, -1703937, 131079, 0, -1769472, 131079, 0, -1769471, 131079, 0, -1769470, 131079, 0, -1769469, 131079, 0, -1769468, 131079, 0, -1769467, 131079, 0, -1769466, 131079, 0, -1769465, 131079, 0, -1769464, 131079, 0, -1769463, 131079, 0, -1835001, 131079, 0, -1835000, 131079, 0, -1834999, 131079, 0, -1900536, 131079, 0, -1638401, 131079, 0, -1703936, 131079, 0, -1703935, 131079, 0, -1703934, 131079, 0, -1703933, 131079, 0, -1703932, 131079, 0, -1703931, 131079, 0, -1703930, 131079, 0, -1703929, 131079, 0, -1703928, 131079, 0, -1703927, 131079, 0, -1572865, 131079, 0, -1507329, 131079, 0, -1638400, 131079, 0, -1572864, 131079, 0, -327690, 131079, 0, -327689, 131079, 0, -327688, 131079, 0, -327687, 131079, 0, -327686, 131079, 0, -327685, 131079, 0, -327684, 131079, 0, -327683, 131079, 0, -327682, 131079, 0, -327681, 131079, 0, -393216, 131079, 0, -393215, 131079, 0, -393214, 131079, 0, -393213, 131079, 0, -393212, 131079, 0, -393211, 131079, 0, -393210, 131079, 0, -393209, 131079, 0, -393208, 131079, 0, -393207, 131079, 0, -262145, 131079, 0, -327680, 131079, 0)
layer_1/tile_data = PackedInt32Array(-1441794, 131079, 11, -1441795, 65543, 11, -1441796, 65543, 11, -1441797, 65543, 11, -1441798, 65543, 11, -1441799, 65543, 11, -1441800, 65543, 11, -1441801, 65543, 11, -1441802, 65543, 11, -1441803, 7, 9, -1507327, 7, 11, -1507326, 65543, 9, -1507325, 65543, 9, -1507324, 65543, 9, -1507323, 65543, 9, -1507322, 65543, 9, -1507321, 65543, 9, -1507320, 65543, 9, -1507319, 65543, 9, -1507318, 131079, 9, -1376267, 7, 10, -1310731, 7, 10, -1245195, 7, 10, -1179659, 7, 10, -1114123, 7, 10, -1048587, 7, 10, -983051, 7, 10, -917515, 7, 10, -851979, 7, 10, -786443, 7, 10, -720907, 7, 10, -655371, 7, 10, -589835, 7, 10, -524299, 7, 10, -458763, 7, 10, -327691, 7, 10, -262155, 7, 11, -327670, 131079, 11, -393206, 7, 10, -524278, 131079, 10, -589814, 131079, 10, -655350, 131079, 10, -720886, 131079, 10, -786422, 131079, 10, -851958, 131079, 10, -917494, 131079, 10, -983030, 131079, 10, -1048566, 131079, 10, -1114102, 131079, 10, -1179638, 131079, 10, -1245174, 131079, 10, -1310710, 131079, 10, -1376246, 131079, 10, -1441782, 131079, 10, -1703947, 65543, 10, -1703948, 65543, 10, -1703949, 65543, 10, -1769462, 131079, 10, -1769461, 65543, 10, -1769460, 65543, 10, -1638413, 65543, 10, -1572877, 65543, 10, -1507341, 65543, 10, -1638412, 65543, 10, -1572876, 65543, 10, -1507340, 65543, 10, -1638411, 65543, 10, -1572875, 65543, 10, -1507339, 65543, 10, -1703946, 65543, 10, -1638410, 65543, 10, -1572874, 65543, 10, -1507338, 65543, 10, -1703945, 65543, 10, -1638409, 65543, 10, -1572873, 65543, 10, -1507337, 65543, 10, -1703944, 65543, 10, -1638408, 65543, 10, -1572872, 65543, 10, -1507336, 65543, 10, -1703943, 65543, 10, -1638407, 65543, 10, -1572871, 65543, 10, -1507335, 65543, 10, -1703942, 65543, 10, -1638406, 65543, 10, -1572870, 65543, 10, -1507334, 65543, 10, -1703941, 65543, 10, -1638405, 65543, 10, -1572869, 65543, 10, -1507333, 65543, 10, -1638396, 65543, 9, -1572860, 65543, 10, -1638395, 65543, 9, -1572859, 65543, 10, -1638394, 65543, 9, -1572858, 65543, 10, -1638393, 65543, 9, -1572857, 65543, 10, -1638392, 65543, 11, -1572856, 65543, 10, -1638391, 65543, 11, -1572855, 65543, 10, -1703926, 131079, 10, -1638390, 131079, 11, -1572854, 65543, 10, -1703925, 65543, 10, -1638389, 65543, 10, -1572853, 65543, 10, -1703924, 65543, 10, -1638388, 65543, 10, -1572852, 65543, 10, -1441805, 65543, 10, -1376269, 65543, 10, -1310733, 65543, 10, -1245197, 65543, 10, -1179661, 65543, 10, -1114125, 65543, 10, -1048589, 65543, 10, -983053, 65543, 10, -917517, 65543, 10, -851981, 65543, 10, -786445, 65543, 10, -720909, 65543, 10, -655373, 65543, 10, -589837, 65543, 10, -524301, 65543, 10, -458765, 65543, 10, -393229, 65543, 10, -327693, 65543, 10, -262157, 65543, 10, -1441804, 65543, 10, -1376268, 65543, 10, -1310732, 65543, 10, -1245196, 65543, 10, -1179660, 65543, 10, -1114124, 65543, 10, -1048588, 65543, 10, -983052, 65543, 10, -917516, 65543, 10, -851980, 65543, 10, -786444, 65543, 10, -720908, 65543, 10, -655372, 65543, 10, -589836, 65543, 10, -524300, 65543, 10, -458764, 65543, 10, -393228, 65543, 10, -327692, 65543, 10, -262156, 65543, 10, -1507317, 65543, 10, -1441781, 65543, 10, -1376245, 65543, 10, -1310709, 65543, 10, -1245173, 65543, 10, -1179637, 65543, 10, -1114101, 65543, 10, -1048565, 65543, 10, -983029, 65543, 10, -917493, 65543, 10, -851957, 65543, 10, -786421, 65543, 10, -720885, 65543, 10, -655349, 65543, 10, -589813, 65543, 10, -524277, 65543, 10, -458741, 65543, 10, -393205, 65543, 10, -327669, 65543, 10, -1507316, 65543, 10, -1441780, 65543, 10, -1376244, 65543, 10, -1310708, 65543, 10, -1245172, 65543, 10, -1179636, 65543, 10, -1114100, 65543, 10, -1048564, 65543, 10, -983028, 65543, 10, -917492, 65543, 10, -851956, 65543, 10, -786420, 65543, 10, -720884, 65543, 10, -655348, 65543, 10, -589812, 65543, 10, -524276, 65543, 10, -458740, 65543, 10, -393204, 65543, 10, -327668, 65543, 10, -2031620, 65543, 10, -1966084, 65543, 10, -2031619, 65543, 10, -1966083, 65543, 10, -2031618, 65543, 10, -1966082, 65543, 10, -2031617, 65543, 10, -1966081, 65543, 10, -2097152, 65543, 10, -2031616, 65543, 10, -2097151, 65543, 10, -2031615, 65543, 10, -2097150, 65543, 10, -2031614, 65543, 10, -2097149, 65543, 10, -2031613, 65543, 10, -2097148, 65543, 10, -2031612, 65543, 10, -2097147, 65543, 10, -2031611, 65543, 10, -2097146, 65543, 10, -2031610, 7, 9, -2097145, 65543, 10, -2031609, 65543, 9, -2097144, 65543, 10, -2031608, 65543, 9, -2097143, 65543, 10, -2031607, 65543, 9, -2097142, 65543, 10, -2031606, 131079, 9, -2097141, 65543, 10, -2031605, 65543, 10, -2097140, 65543, 10, -2031604, 65543, 10, -1966076, 65543, 10, -1900540, 65543, 10, -1835004, 65543, 9, -1966075, 65543, 10, -1900539, 65543, 10, -1835003, 65543, 9, -1966074, 131079, 10, -1900538, 131079, 10, -1835002, 131079, 11, -1966070, 131079, 10, -1900534, 131079, 10, -1834998, 131079, 10, -1966069, 65543, 10, -1900533, 65543, 10, -1834997, 65543, 10, -1966068, 65543, 10, -1900532, 65543, 10, -1834996, 65543, 10, -2031629, 65543, 10, -1966093, 65543, 10, -1900557, 65543, 10, -1835021, 65543, 10, -1769485, 65543, 10, -2031628, 65543, 10, -1966092, 65543, 10, -1900556, 65543, 10, -1835020, 65543, 10, -1769484, 65543, 10, -2031627, 65543, 10, -1966091, 65543, 10, -1900555, 65543, 10, -1835019, 65543, 10, -1769483, 65543, 10, -2031626, 65543, 10, -1966090, 65543, 10, -1900554, 65543, 10, -1835018, 65543, 10, -1769482, 65543, 10, -2031625, 65543, 10, -1966089, 65543, 10, -1900553, 65543, 10, -1835017, 65543, 10, -1769481, 65543, 10, -2031624, 65543, 10, -1966088, 65543, 10, -1900552, 65543, 10, -1835016, 65543, 10, -1769480, 65543, 10, -2031623, 65543, 10, -1966087, 65543, 10, -1900551, 65543, 10, -1835015, 65543, 10, -1769479, 65543, 10, -2031622, 65543, 10, -1966086, 65543, 10, -1900550, 65543, 10, -1835014, 65543, 10, -1769478, 65543, 10, -2031621, 65543, 10, -1966085, 65543, 10, -1900549, 65543, 10, -1835013, 65543, 10, -1769477, 65543, 10, -1507330, 7, 10, -1572866, 7, 10, -1572863, 7, 10, -1638399, 7, 9, -1638402, 7, 10, -1703938, 7, 10, -1769474, 7, 9, -1769473, 65543, 9, -1835008, 65543, 9, -1835007, 65543, 9, -1835006, 65543, 9, -1835005, 65543, 9, -1638398, 65543, 9, -1638397, 65543, 9, -1900548, 65543, 10, -1835012, 65543, 10, -1900547, 65543, 10, -1835011, 65543, 10, -1900546, 65543, 10, -1835010, 65543, 10, -1900545, 65543, 10, -1835009, 65543, 10, -1966080, 65543, 10, -1900544, 65543, 10, -1966079, 65543, 10, -1900543, 65543, 10, -1966078, 65543, 10, -1900542, 65543, 10, -1966077, 65543, 10, -1900541, 65543, 10, -1769476, 65543, 10, -1703940, 65543, 10, -1638404, 65543, 10, -1572868, 65543, 10, -1507332, 65543, 10, -1769475, 65543, 10, -1703939, 65543, 10, -1638403, 65543, 10, -1572867, 65543, 10, -1507331, 65543, 10, -262154, 65543, 11, -262153, 65543, 11, -262152, 65543, 11, -262151, 65543, 11, -262150, 65543, 11, -262149, 65543, 11, -262148, 65543, 11, -262147, 65543, 11, -262146, 65543, 11, -327679, 65543, 11, -327678, 65543, 11, -327677, 65543, 11, -327676, 65543, 11, -327675, 65543, 11, -327674, 65543, 11, -327673, 65543, 11, -327672, 65543, 11, -327671, 65543, 11, -393227, 7, 10, -458742, 7, 10, -196621, 65543, 10, -131085, 65543, 10, -196620, 65543, 10, -131084, 65543, 10, -196619, 65543, 10, -131083, 65543, 10, -196618, 65543, 10, -131082, 65543, 10, -196617, 65543, 10, -131081, 65543, 10, -196616, 65543, 10, -131080, 65543, 10, -196615, 65543, 10, -131079, 65543, 10, -196614, 65543, 10, -131078, 65543, 10, -196613, 65543, 10, -131077, 65543, 10, -196612, 65543, 10, -131076, 65543, 10, -196611, 65543, 10, -131075, 65543, 10, -196610, 65543, 10, -131074, 65543, 10, -196609, 65543, 10, -131073, 65543, 10, -262144, 65543, 10, -196608, 65543, 10, -262143, 65543, 10, -196607, 65543, 10, -262142, 65543, 10, -196606, 65543, 10, -262141, 65543, 10, -196605, 65543, 10, -262140, 65543, 10, -196604, 65543, 10, -262139, 65543, 10, -196603, 65543, 10, -262138, 65543, 10, -196602, 65543, 10, -262137, 65543, 10, -196601, 65543, 10, -262136, 65543, 10, -196600, 65543, 10, -262135, 65543, 10, -196599, 65543, 10, -262134, 65543, 10, -196598, 65543, 10, -262133, 65543, 10, -196597, 65543, 10, -262132, 65543, 10, -196596, 65543, 10, -1572862, 65543, 10, -1572861, 65543, 10)
layer_2/tile_data = PackedInt32Array(-1376266, 7, 12, -1310730, 7, 13, -1441783, 131079, 12, -1376247, 131079, 13, -1376258, 131079, 12, -1310722, 131079, 13, -1441791, 7, 12, -1376255, 7, 13, -1376265, 65543, 12, -1310729, 65543, 13, -1376264, 327687, 18, -1310728, 65543, 13, -1376263, 65543, 12, -1310727, 65543, 13, -1376262, 65543, 12, -1310726, 393223, 18, -1376261, 65543, 12, -1310725, 65543, 13, -1376260, 327687, 17, -1310724, 65543, 13, -1376259, 65543, 12, -1310723, 393223, 17, -1441790, 65543, 12, -1376254, 65543, 13, -1441789, 327687, 18, -1376253, 262151, 18, -1441788, 65543, 12, -1376252, 65543, 13, -1441787, 65543, 12, -1376251, 65543, 13, -1441786, 65543, 12, -1376250, 65543, 13, -1441785, 393223, 17, -1376249, 65543, 13, -1441784, 65543, 12, -1376248, 393223, 18, -1966073, 7, 12, -1900537, 7, 13, -1966071, 131079, 12, -1900535, 131079, 13)
layer_3/tile_data = PackedInt32Array(-1376266, 196615, 8, -1310730, 196615, 9, -1245194, 196615, 10, -1441783, 393223, 8, -1376247, 393223, 9, -1310711, 393223, 10, -1376258, 393223, 8, -1310722, 393223, 9, -1245186, 393223, 10, -1441791, 196615, 8, -1376255, 196615, 9, -1310719, 196615, 10, -1376265, 262151, 8, -1376264, 262151, 8, -1376263, 262151, 8, -1376262, 262151, 8, -1376261, 262151, 8, -1376260, 262151, 8, -1376259, 262151, 8, -1441790, 262151, 8, -1441789, 262151, 8, -1441788, 262151, 8, -1441787, 262151, 8, -1441786, 262151, 8, -1441785, 262151, 8, -1441784, 262151, 8, -1966073, 196615, 8, -1900537, 196615, 9, -1835001, 196615, 10, -1966071, 393223, 8, -1900535, 393223, 9, -1834999, 393223, 10)
layer_4/tile_data = PackedInt32Array(-1376261, 786439, 0, -1376265, 851975, 0, -1441786, 851975, 0, -1441789, 786439, 0, -1441784, 786439, 0)
layer_5/tile_data = PackedInt32Array(-1310726, 1179655, 11, -1376251, 1179655, 11)

[node name="DungeonDoor" parent="." instance=ExtResource("2_1jte3")]
position = Vector2(136, -464)
is_open = true

[node name="LevelTransition" parent="." instance=ExtResource("3_fq0q4")]
position = Vector2(0, -88)
level = "res://Levels/ChestRoom/chest_room_a3.tscn"
target_transition_area = "LevelTransition2"
side = 3

[node name="LevelTransition2" parent="." instance=ExtResource("3_fq0q4")]
position = Vector2(136, -456)
level = "res://Levels/ChestRoom/chest_room_a4.tscn"
size = 1
side = 2

[node name="Stage4PuzzleContainer" type="Node2D" parent="." node_paths=PackedStringArray("door_to_open")]
script = ExtResource("4_ujcm1")
door_to_open = NodePath("../CellDoor")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Stage4PuzzleContainer"]
max_polyphony = 4

[node name="Stage4HurtBox" type="Area2D" parent="Stage4PuzzleContainer"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false
script = ExtResource("5_hnexm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stage4PuzzleContainer/Stage4HurtBox"]
position = Vector2(-4, -190)
shape = SubResource("CircleShape2D_fon8f")

[node name="IntPersistentDataHandler" parent="Stage4PuzzleContainer" instance=ExtResource("7_uwj7q")]

[node name="Lever4-4" parent="." instance=ExtResource("5_8gown")]
unique_name_in_owner = true
position = Vector2(-56, -139)

[node name="Sign" parent="." instance=ExtResource("6_itr73")]
position = Vector2(-104, -139)
lines = Array[String](["Buatlah pola tepi persegi", "Atau biasa disebut persegi hollow", "Interaksi dengan blok", "Berbentuk spiral", "Dan tekan tuas", "Setelah selesai!"])

[node name="PlayerSpawn" parent="." instance=ExtResource("10_smgmu")]
position = Vector2(0, -101)

[node name="SwitchTile" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(24, -217)

[node name="SwitchTile2" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(56, -217)

[node name="SwitchTile3" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(88, -217)

[node name="SwitchTile4" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(120, -217)
tile_correctness = true

[node name="SwitchTile5" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(-8, -217)
tile_correctness = true

[node name="SwitchTile6" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(-8, -185)
tile_correctness = true

[node name="SwitchTile7" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(-8, -153)
tile_correctness = true

[node name="SwitchTile8" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(-8, -249)
tile_correctness = true

[node name="SwitchTile9" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(-8, -281)
tile_correctness = true

[node name="SwitchTile10" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(24, -281)
tile_correctness = true

[node name="SwitchTile11" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(56, -281)
tile_correctness = true

[node name="SwitchTile12" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(88, -281)
tile_correctness = true

[node name="SwitchTile13" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(120, -281)
tile_correctness = true

[node name="SwitchTile14" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(120, -249)
tile_correctness = true

[node name="SwitchTile15" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(88, -249)

[node name="SwitchTile16" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(56, -249)

[node name="SwitchTile17" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(24, -249)

[node name="SwitchTile18" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(24, -185)

[node name="SwitchTile19" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(56, -185)

[node name="SwitchTile20" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(88, -185)

[node name="SwitchTile21" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(120, -185)
tile_correctness = true

[node name="SwitchTile22" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(120, -153)
tile_correctness = true

[node name="SwitchTile23" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(88, -153)
tile_correctness = true

[node name="SwitchTile24" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(56, -153)
tile_correctness = true

[node name="SwitchTile25" parent="." instance=ExtResource("4_cbarx")]
unique_name_in_owner = true
position = Vector2(24, -153)
tile_correctness = true

[node name="CellDoor" parent="." instance=ExtResource("11_7gf04")]
position = Vector2(0, -321)
